--- a/iniciando-o-html-e-css/projetos/pagina-de-receitas/index.html
+++ b/iniciando-o-html-e-css/projetos/pagina-de-receitas/index.html
@@ -60,5 +60,9 @@
       </section>
     </main>
   </div>
+
+  <footer>
+    Feito com <img src="assets/heart.svg" alt="Coração branco"> pela Rocketseat
+  </footer>
 </body>
 </html>
