--- a/iniciando-o-html-e-css/projetos/travelgram/index.html
+++ b/iniciando-o-html-e-css/projetos/travelgram/index.html
@@ -11,6 +11,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="bg-surface-color">
+    <nav class="container">
+      <a href="#" id="logo">
+        <img src="assets/logo.svg" alt="Logomarca">
+      </a>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="assets/icons/magnifying-glass.svg" alt="ícone de lupa">
+          </a>
+        </li>
+        <li>
+          <a href="#">Explorar</a>
+        </li>
+        <li>
+          <a href="#">Minhas viagens</a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="assets/profile-pic.png" alt="Imagem de Isabela Torres">
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <header>
+
+  </header>
 </body>
 </html>
