--- a/iniciando-o-html-e-css/projetos/travelgram/index.html
+++ b/iniciando-o-html-e-css/projetos/travelgram/index.html
@@ -67,6 +67,22 @@
         </ul>
       </div>
     </header>
-</div>
+  </div>
+
+  <main class="container">
+    <img src="assets/images/image-01.png" alt="image-01">
+    <img src="assets/images/image-02.png" alt="image-02">
+    <img src="assets/images/image-03.png" alt="image-03">
+    <img src="assets/images/image-04.png" alt="image-04">
+    <img src="assets/images/image-05.png" alt="image-05">
+    <img src="assets/images/image-06.png" alt="image-06">
+    <img src="assets/images/image-07.png" alt="image-07">
+    <img src="assets/images/image-08.png" alt="image-08">
+    <img src="assets/images/image-09.png" alt="image-09">
+    <img src="assets/images/image-10.png" alt="image-10">
+    <img src="assets/images/image-11.png" alt="image-11">
+    <img src="assets/images/image-12.png" alt="image-12">
+
+  </main>
 </body>
 </html>
