--- a/iniciando-o-html-e-css/projetos/travelgram/index.html
+++ b/iniciando-o-html-e-css/projetos/travelgram/index.html
@@ -84,5 +84,15 @@
     <img src="assets/images/image-12.png" alt="image-12">
 
   </main>
+
+  <footer class="container">
+    <span>
+      Travelgram &copy; 2024
+    </span>
+
+    <span>Termos de uso</span>
+
+    <span>Política de privacidade</span>
+  </footer>
 </body>
 </html>
