--- a/iniciando-o-html-e-css/projetos/portal-de-noticias/index.html
+++ b/iniciando-o-html-e-css/projetos/portal-de-noticias/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,8 +11,10 @@
   <title>Portal de Notícias</title>
   <link rel="stylesheet" href="styles/index.css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <header class="container">
     <nav id="primary" class="grid grid-flow-col">
@@ -44,32 +47,70 @@
   <main class="grid container">
     <section id="featured" class="grid grid-flow-col gap-16">
       <figure class="card">
-        <img src="assets/images/image-01.png" alt="">
+        <img src="assets/images/image-01.png" alt="Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
+        eficiência nas residências.">
 
         <figcaption>
           <span class="content-tag">Robótica</span>
-          <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2>
+          <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
+            eficiência nas residências.</h2>
         </figcaption>
       </figure>
 
       <div class="grid grid-cols-2 gap-16">
-        <div>
-          <img src="assets/images/image-02.png" alt="">
-        </div>
+        <figure class="card">
+          <img src="assets/images/image-02.png"
+            alt="Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!">
 
-        <div>
-          <img src="assets/images/image-03.png" alt="">
-        </div>
+          <figcaption>
+            <span class="content-tag">hologramas</span>
+            <h2 class="text-lg">
+              Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!
+            </h2>
+          </figcaption>
+        </figure>
 
-        <div>
-          <img src="assets/images/image-04.png" alt="">
-        </div>
+        <figure class="card">
+          <img src="assets/images/image-03.png"
+            alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
 
-        <div>
-          <img src="assets/images/image-05.png" alt="">
-        </div>
+          <figcaption>
+            <span class="content-tag">internet</span>
+            <h2 class="text-lg">
+              Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos
+              e nos comuni...
+            </h2>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="assets/images/image-04.png"
+            alt="Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.">
+
+          <figcaption>
+            <span class="content-tag">vestíveis</span>
+            <h2 class="text-lg">
+              Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights
+              valiosos para o...
+            </h2>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="assets/images/image-05.png"
+            alt="Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.">
+
+          <figcaption>
+            <span class="content-tag">realidade virtual</span>
+            <h2 class="text-lg">
+              Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a
+              aprendizagem trad...
+            </h2>
+          </figcaption>
+        </figure>
       </div>
     </section>
   </main>
 </body>
+
 </html>
